# FreeFile

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  REAEME.md
appendix/: CMakeLists.txt  deleteFile.cpp  handle.cpp
doc/: 00_遍历系统的句柄.md  01_配置文件的选择.md  遍历系统的句柄.md
src/: CMakeLists.txt  enumFile.hpp  exception.hpp  log.hpp  main.cpp  winutils.hpp
